ResponseFormatting/force-app/main/default/objects/avnio__Response__c/fields/FontSizes__c.field-meta.xml
<CustomField>
    <fullName>FontSizes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FontSizes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>