ResponseFormatting/force-app/main/default/objects/avnio__Response__c/fields/FontStyles__c.field-meta.xml
<CustomField>
    <fullName>FontStyles__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FontStyles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>